Replaced deprecated RestHighLevelClient. Moved all Elasticsearch queries over to new format.